--- a/frps.ini
+++ b/frps.ini
@@ -33,7 +33,7 @@ dashboard_pwd = admin
 # dashboard assets directory(only for debug mode)
 # assets_dir = ./static
 # console or real logFile path like ./frps.log
-log_file = ./frps.log
+log_file = ./log/frps.log
 
 # trace, debug, info, warn, error
 log_level = info
