--- a/frps.ini
+++ b/frps.ini
@@ -28,7 +28,7 @@ dashboard_port = 7500
 
 # dashboard user and passwd for basic auth protect, if not set, both default value is admin
 dashboard_user = admin
-dashboard_pwd = admin
+dashboard_pwd = Qwert123
 
 # dashboard assets directory(only for debug mode)
 # assets_dir = ./static
@@ -48,7 +48,7 @@ token = 12345678
 # heartbeat_timeout = 90
 
 # only allow frpc to bind ports you list, if you set nothing, there won't be any limit
-allow_ports = 18000-20000
+allow_ports = 5000-5100
 
 # pool_count in each proxy will change to max_pool_count if they exceed the maximum value
 max_pool_count = 5
