--- a/frps.ini
+++ b/frps.ini
@@ -41,14 +41,14 @@ log_level = info
 log_max_days = 3
 
 # auth token
-token = 12345678
+token = imgki.com
 
 # heartbeat configure, it's not recommended to modify the default value
 # the default value of heartbeat_timeout is 90
 # heartbeat_timeout = 90
 
 # only allow frpc to bind ports you list, if you set nothing, there won't be any limit
-allow_ports = 5000-5100
+allow_ports = 10000-20000
 
 # pool_count in each proxy will change to max_pool_count if they exceed the maximum value
 max_pool_count = 5
@@ -62,7 +62,7 @@ authentication_timeout = 900
 
 # if subdomain_host is not empty, you can set subdomain when type is http or https in frpc's configure file
 # when subdomain is test, the host used by routing is test.frps.com
-subdomain_host = 
+# subdomain_host = frps.imgki.com
 
 # if tcp stream multiplexing is used, default is true
 tcp_mux = true
